# OpenGL_CLion_Linux_Setup

./: CMakeLists.txt  README.md  main.cpp
